fixed spacing issue in intro

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -112,6 +112,9 @@
   flex-direction: column;
   justify-content: space-evenly;
 
+  padding-top: 10%;
+  padding-bottom: 10%;
+
   background-color:rgba(241, 218, 216, 0.3);
 }
 
@@ -129,7 +132,7 @@
   display: flex;
   justify-content: center; */
 
-  width: 100%;
+  width: 65%;
 
 }
 
